fix not centered bug

--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,13 @@ body {
     background-color: #2F3645;
 }
 
+form {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    gap: 0px;
+}
+
 h1 {
     margin: 0;
     font-size: 30px;
@@ -40,7 +47,7 @@ p {
 }
 
 #calc {
-    width: 40%;
+    width: 50%;
     padding: 12px;
     align-self: center;
     font-size: 18px;
